--- a/SayHi/src/main/webapp/resources/css/list_style.css
+++ b/SayHi/src/main/webapp/resources/css/list_style.css
@@ -1,124 +1,184 @@
 @charset "UTF-8";
 
-.area{
+.area {
 	color: black;
 	background-color: #ececed;
 	overflow: hidden;
+	margin-bottom: 20px;
 }
 
-label {
+label.catlabel {
 	font-size: 13px;
 	line-height: 50px;
-    text-align: center;
-    align-items: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    color: #b2b2b2;
-    background-color: white;
-    font-weight: bold;
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+	text-align: center;
+	align-items: center;
+	padding-left: 50px;
+	padding-right: 50px;
+	color: #b2b2b2;
+	background-color: white;
+	font-weight: bold;
+	border-left: 1px solid #ddd;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
 	background-color: #ededef;
-    display: flex;
-    cursor: pointer;
+	display: flex;
+	cursor: pointer;
 }
 
-input[type=radio]:checked+label {
+label.subcatlabel{
+	font-size: 15px;
+	font-weight: bold;
+	line-height: 50px;
+	text-align: left;
+	align-items: left;
+	padding-left: 10px;
+	padding-right: 50px;
+	color: black;
+	background-color: white;
+	border-bottom: 1px solid #ddd;
+	display: flex;
+	cursor: pointer;
+}
+
+#category:checked+label[for=category] {
 	color: #000;
     font-weight: bold;
     background-color: #fff;
     border-bottom: none;
 }
 
-.sort {
-    float: left;
-    text-align: center;
-    text-decoration: none;
-    background-color: white;
-    padding-left: 20px;
-    padding-right: 20px;
+
+#brand:checked+label {
+	color: #000;
+    font-weight: bold;
+    background-color: #fff;
+    border-bottom: none;
 }
 
-.dropbtn{
+input[type=radio] {
+	display: none;
+}
+
+
+.subcategory{
+	display: none;
+	background-color:white;
+}
+
+#tops:checked+#topmenu, #outer:checked+#outermenu, #pants:checked+#pantsmenu, #onepiece:checked+#onepiecemenu, #skirt:checked+#skirtmenu, #sneakers:checked+#sneakersmenu{
+	display: block;
+}
+
+.submenu {
+	display: none;
+}
+
+.submenu ul{
+	list-style: none;
+	display: flex;
+	padding-top: 10px;
+	padding-left: 0px;
+	align-content: flex-start;
+	text-align: left;
+	flex-direction: column;
+	flex-wrap: wrap;
+	overflow: auto;
+	height: 160px;
+	border-bottom: 1px solid #ddd;
+}
+
+.submenu li{
+	padding-bottom: 5px;
+	padding-left: 10px;
+}
+
+.sort {
+	float: left;
+	text-align: center;
+	text-decoration: none;
+	background-color: white;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.dropbtn {
 	opacity: 0;
 }
 
-.category{
-    float: left;
+.category {
+	float: left;
 }
 
-.brand{
-    float: left;
+.brand {
+	float: left;
 }
 
-.products{
+.products {
 	float: left;
 	vertical-align: top;
 }
 
-.notice{
+.notice {
 	padding: 22px 0px 3px 22px;
 	float: left;
 	color: #a9a9a9;
 }
 
-.product-list{
+.product-list {
 	position: relative;
 	z-index: -1;
 }
 
-.product-box{
+.product-box {
 	position: relative;
-    width: 230px;
-    height: 500px;
-    float: left;
-    color: #b2b2b2;
-    background: #fff;
-    border-right: solid 1px #ddd;
-    border-bottom: solid 1px #ddd;
+	width: 230px;
+	height: 500px;
+	float: left;
+	color: #b2b2b2;
+	background: #fff;
+	border-right: solid 1px #ddd;
+	border-bottom: solid 1px #ddd;
 	padding: 20px;
 	box-sizing: border-box;
 	border-left: solid 1px #ddd;
 	border-top: solid 1px #ddd;
 }
 
-.product-image{
+.product-image {
 	position: relative;
 	width: 190px;
 	height: 230px;
 	margin-bottom: 5px;
 }
 
-.product-brand{
+.product-brand {
 	margin-bottom: -5px;
 	font-weight: bold;
 	font-size: 15px;
 	color: black;
 }
 
-.product-name{
+.product-name {
 	margin-bottom: -5px;
 	font-size: 13px;
 	color: black;
 }
 
-.product-price{
+.product-price {
 	margin-bottom: -5px;
 	font-weight: bold;
 	font-size: 13px;
 	color: black;
 }
 
-.product-info{
+.product-info {
 	margin-bottom: -5px;
 }
 
-.product-option{
-	margin-bottom: -10px;
+.product-option {
+	margin-bottom: -15px;
 }
 
-
-ul, li{
+ul, li {
 	list-style: none;
 }
